[fix] floating field overlap value, when we set it with value property

--- a/banking/static/css/admin/index.css
+++ b/banking/static/css/admin/index.css
@@ -18,4 +18,5 @@ html, body{
     margin: 0px 5px;
     display: inline-block;
     height: 101px;
+    vertical-align: top;
 }
